Redis 연동 및 테스트 완료

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,23 @@
+# ?????? ??
 spring.application.name=chatbot
+
+# ???? ??
 spring.config.import=optional:file:.env.properties
 
+# ??
 server.port =8081
 
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+# ?? DB
+spring.datasource.url=${POSTGRE_URL}
+spring.datasource.username=${POSTGRE_USERNAME}
+spring.datasource.password=${POSTGRE_PASSWORD}
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
+# ?? DB
+spring.data.redis.host=${REDIS_URL}
+spring.data.redis.port=${REDIS_PORT}
+spring.data.redis.password=${REDIS_PASSWORD}
+
+#JPA
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.hibernate.ddl-auto=update
