--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,19 @@
-# ?????? ??
+# project name
 spring.application.name=chatbot
 
-# ???? ??
+# env
 spring.config.import=optional:file:.env.properties
 
-# ??
+# port
 server.port =8081
 
-# ?? DB
+# main DB
 spring.datasource.url=${POSTGRE_URL}
 spring.datasource.username=${POSTGRE_USERNAME}
 spring.datasource.password=${POSTGRE_PASSWORD}
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-# ?? DB
+# sub DB
 spring.data.redis.host=${REDIS_URL}
 spring.data.redis.port=${REDIS_PORT}
 spring.data.redis.password=${REDIS_PASSWORD}
@@ -21,3 +21,9 @@ spring.data.redis.password=${REDIS_PASSWORD}
 #JPA
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+# OpenAI API Key
+openai.secret-key=${OPENAI}
+
+# valid keys
+api.valid-keys=test-key
