--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,7 +23,7 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.hibernate.ddl-auto=update
 
 # OpenAI API Key
-openai.secret-key=${OPENAI}
+openai.api-key=${OPENAI}
 
 # valid keys
 api.valid-keys=test-key
