--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,6 +24,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 # OpenAI API Key
 openai.api-key=${OPENAI}
+openai.model=gpt-3.5-turbo
 
 # valid keys
 api.valid-keys=test-key
