--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.application.name=chatbot
 spring.config.import=optional:file:.env.properties
 
 # port
-server.port =8081
+server.port=8081
 
 # main DB
 spring.datasource.url=${POSTGRE_URL}
@@ -28,3 +28,7 @@ openai.model=gpt-3.5-turbo
 
 # valid keys
 api.valid-keys=test-key
+
+# logging
+logging.level.root=INFO
+logging.level.com.rocket.chatbot=DEBUG
