--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,14 +8,14 @@ spring.config.import=optional:file:.env.properties
 server.port=8081
 
 # main DB
-spring.datasource.url=${POSTGRE_URL}
-spring.datasource.username=${POSTGRE_USERNAME}
-spring.datasource.password=${POSTGRE_PASSWORD}
+spring.datasource.url=${POSTGRE_URL:}
+spring.datasource.username=${POSTGRE_USERNAME:}
+spring.datasource.password=${POSTGRE_PASSWORD:}
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # sub DB
-spring.data.redis.host=${REDIS_URL}
-spring.data.redis.port=${REDIS_PORT}
+spring.data.redis.host=${REDIS_HOST:}
+spring.data.redis.port=${REDIS_PORT:}
 spring.data.redis.password=${REDIS_PASSWORD}
 
 #JPA
