--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,3 +32,5 @@ api.valid-keys=test-key
 # logging
 logging.level.root=INFO
 logging.level.com.rocket.chatbot=DEBUG
+
+server.forward-headers-strategy=framework
